--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 /* Botões azuis simples */
 .stButton > button {
-    background-color: #40980a;
+    background-color: #2173df;
     color: white;
     font-weight: bold;
     border-radius: 8px;
